samples/_failures_safe/1761702554_02ae17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abfd81ef.c: In function ‘main’:
./samples/SAFE/__tmp_abfd81ef.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
